# agentic_master_forge

./: .gitignore  crew_memory.json  forge_system_launch.py  pyproject.toml
New folder/: forge_presentation_neural.py  launch_all.py
deliverables/: Forge_Intelligence_Map.md  Forge_Training_Dataset.json  Holo_Report.md  Master_Forge_Manifest.md  architect_agent_forge_core_system_183836.md  design_the_code_compiler_architecture_183836.md  design_the_code_specification_183836.md  diagnose_system_error_183836.md  holo_manifest.json
forge project/: import subprocess, os.txt
src/agentic_masters_genesis_forge/: crew.py  main.py
src/agentic_masters_genesis_forge/config/: agents.yaml  tasks.yaml
